4-k8s-manifests/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: simple-clock
  name: simple-clock
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: simple-clock
  type: ClusterIP
status:
  loadBalancer: {}
