4-k8s-manifests/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: simple-clock
spec:
  rules:
  - host: simple-clock.com
    http:
      paths:
      - backend:
          service:
            name: simple-clock
            port:
              number: 80
        path: /
        pathType: Exact
status:
  loadBalancer: {}
